examples/test/testpolicy1212.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1212
  namespace: namespace224
spec:
  podSelector:
    matchLabels:
      key19: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value18
      podSelector:
        matchLabels:
          key9: value33
          key40: value12
          key26: value2
